--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -125,6 +125,8 @@ if( apitest_WITH_D3D12 )
 		framework/gfx_dx12.cpp
 
 		solutions/untexturedobjects/d3d12/d3d12solution.cpp
+		solutions/untexturedobjects/d3d12/setconstants.cpp
+		solutions/untexturedobjects/d3d12/setconstantbufferview.cpp
 	)
 endif( apitest_WITH_D3D12 )
 
@@ -350,6 +352,14 @@ if( apitest_WITH_D3D12 )
 source_group( "Solutions\\UntexturedObjects\\D3D12\\D3D12Solution" FILES 
 	solutions/untexturedobjects/d3d12/D3D12Solution.cpp
 	solutions/untexturedobjects/d3d12/D3D12Solution.h
+)
+source_group( "Solutions\\UntexturedObjects\\D3D12\\SetConstants" FILES 
+	solutions/untexturedobjects/d3d12/setconstants.cpp
+	solutions/untexturedobjects/d3d12/setconstants.h
+)
+source_group( "Solutions\\UntexturedObjects\\D3D12\\SetConstantBufferView" FILES 
+	solutions/untexturedobjects/d3d12/setconstantbufferview.cpp
+	solutions/untexturedobjects/d3d12/setconstantbufferview.h
 )
 endif( apitest_WITH_D3D12 )
 
