Add Bundle solution for dynamic streaming.
Increase the number of objects in two problems.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -154,6 +154,7 @@ if( apitest_WITH_D3D12 )
 		solutions/untexturedobjects/d3d12/multithread.cpp
 
 		solutions/dynamicstreaming/d3d12/map.cpp
+		solutions/dynamicstreaming/d3d12/bundle.cpp
 		solutions/dynamicstreaming/d3d12/multithread.cpp
 
 		solutions/texturedquads/d3d12/naive.cpp
@@ -398,6 +399,10 @@ source_group( "Solutions\\TexturedQuads\\D3D12\\Notex(SOL)" FILES
 source_group( "Solutions\\DynamicStreaming\\D3D12\\Map" FILES
 	solutions/dynamicstreaming/d3d12/map.cpp
 	solutions/dynamicstreaming/d3d12/map.h
+)
+source_group( "Solutions\\DynamicStreaming\\D3D12\\Bundle" FILES
+	solutions/dynamicstreaming/d3d12/bundle.cpp
+	solutions/dynamicstreaming/d3d12/bundle.h
 )
 source_group( "Solutions\\DynamicStreaming\\D3D12\\MultiThread" FILES
 	solutions/dynamicstreaming/d3d12/multithread.cpp
